# PixID

./: .cz.toml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/nvidia_tensorflow/: Dockerfile  devcontainer.json
.devcontainer/python-cpu/: Dockerfile  devcontainer.json
.devcontainer/python-w-gpu/: Dockerfile  devcontainer.json
deployment/: Dockerfile
src/: face_detector.py  improvments.py  main.py  redis.py
