[tool.poetry]
readme = "README.md"
### After creating a project with this template, please modify these files
# edit your project name
name = "PixID"
# edit your project's version. you can start with 0.1.0 for initial version
version = "0.1.0"
# edit your project's description
description = "testing how prefect works"
# edit your projects' authors
authors = ["MoziCo <mozico.bv@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.2"
loguru = "^0.7.2"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
exifread = "^3.0.0"
deepface = "^0.0.93"
tensorflow = { version = "^2.13.0", extras = ["gpu"] }
tf-keras = "^2.18.0"
python-multipart = "^0.0.18"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
mypy = "^1.4.1"
pytest = "^7.2.2"
pytest-mock = "^3.10.0"
commitizen = "^3.31.0"


[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120
ignore = [
    "F821", # Unknown name (disabled because it doesnt respect annotation postponing),
    "E501", # long lines
]

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

### uncomment these to make mypy event more strict
# follow_imports = "silent"
# warn_redundant_casts = true
# warn_unused_ignores = true
# disallow_any_generics = true
# check_untyped_defs = true
# no_implicit_reexport = true

### for strict mypy: (this is the tricky one :-))
# disallow_untyped_defs = true
